Sun Jul  1 17:13:28 2007  Tim Janik  <timj@gtk.org>

	* launchers/bseshstart.c (custom_find_executable): fixed string buffer
	size, #452604.

Sat Jun 30 23:58:54 2007  Tim Janik  <timj@gtk.org>

	* launchers/beaststart.c (custom_find_executable): fixed string buffer 
	size, #452604.

Thu Jun 21 18:21:33 2007  Stefan Westerfeld  <stefan@space.twc.de>

	* tests/audio/Makefile.am:
	* tests/audio/artscompressor.ref: Added new test for ArtsCompressor.

Fri Apr 20 14:32:32 2007  Stefan Westerfeld  <stefan@space.twc.de>

	* slowtests: Removed directory that is no longer used from SVN.

Sat Mar 31 15:18:54 2007  Stefan Westerfeld  <stefan@space.twc.de>

	* docs/architecture.doxi: Document the new "volume" xinfo.

Wed Feb 14 00:00:01 2007  Tim Janik  <timj@gtk.org>

	* tools/bsefcompare.cc: slight precision increment for the last digit
	of the final rating, to see fractions if we fail by the tenth of a promille.

Tue Feb 13 22:48:04 2007  Tim Janik  <timj@gtk.org>

	* tools/bsefcompare.cc: fixed output logic. never conditionalize
	printf format-strings, this prevents certain compile time checks
	and isn't internationalizable. never omit value units (percent)
	when printing out numbers. adapted formats to skip value digits
	smaller than a tenth promille. if those were needed, percent 
	wouldn't be an appropriate unit anyway. moved rating commentary
	into (the good, the bad, the ugly... ;) into a less disturbing place.

Mon Feb 12 01:41:30 2007  Tim Janik  <timj@gtk.org>

	* library/instruments/bqs-bass-drum-e8012.bse: Bass drum modelled after
	drum synthesizer from Elrad 12/1980.

Mon Feb 12 00:10:04 2007  Tim Janik  <timj@gtk.org>

	* library/instruments/bqs-slow-hum.bse: new instrument by Stefan 
	Westerfeld and William DeVore.

Sun Feb 11 17:42:58 2007  Stefan Westerfeld  <stefan@space.twc.de>

	* r+d-files/transpose_freq.scm: Added this little utility script which is
	useful for computing 12-TET transposed frequencies. I used it while